--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Music Timer</title>
 	<link rel="stylesheet" href="main.css">
 	<link rel="stylesheet" href="musics.css">
-	<body background=".\Resources\2.png" class="fixBackground"></body>
+	<body background=".\Resources\3.png" class="fixBackground"></body>
 	<script type="text/javascript" src="app.js"></script>
 	<script type="text/javascript" src="musics.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -111,6 +111,9 @@
 				<line x1="24" y1="2" x2="24" y2="28" style="stroke-width:8;stroke:black;opacity:0.8;"/>
 			</svg>
 		</div>
+	</div>
+	<div id="playGame1">
+		<p id="playGame1_text"> Play Game </p>
 	</div>
 </body>
 </html>
