--- a/index.html
+++ b/index.html
@@ -120,7 +120,14 @@
 		<p id="playGame1_text"> Play Game </p>
 	</div>
 	<div id="page2" style="display:none;">
-		<div id="playboard"></div>
+		<div id="playboard">
+			<div id="innerground">
+				<div id="line1" class="line"></div>
+				<div id="line2" class="line"></div>
+				<div id="line3" class="line"></div>
+				<div id="line4" class="line"></div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
