--- a/index.html
+++ b/index.html
@@ -120,12 +120,54 @@
 		<p id="playGame1_text"> Play Game </p>
 	</div>
 	<div id="page2" style="display:none;">
+		<div id="back" class="navibutton" style="left:calc(50% - 200px);" onclick="back()">
+			<p id="playGame1_text"> Back </p>
+		</div>
 		<div id="playboard">
-			<div id="innerground">
-				<div id="line1" class="line"></div>
-				<div id="line2" class="line"></div>
-				<div id="line3" class="line"></div>
-				<div id="line4" class="line"></div>
+			<p id="countdown_number"><p>
+			<div id="bottomground" class="ground">
+				<div id="line1" class="line">
+					<div class="box"></div>
+					<div class="box"></div>
+					<div class="box"></div>
+					<div class="box"></div>
+				</div>
+				<div id="line2" class="line">
+					<div class="box"></div>
+					<div class="box"></div>
+					<div class="box"></div>
+					<div class="box"></div>
+				</div>
+				<div id="line3" class="line">
+					<div class="box"></div>
+					<div class="box"></div>
+					<div class="box"></div>
+					<div class="box"></div>
+				</div>
+				<div id="line4" class="line">
+					<div class="box"></div>
+					<div class="box"></div>
+					<div class="box"></div>
+					<div class="box"></div>
+				</div>
+			</div>
+			<div id="topground" class="ground" style="width:400px; height:400px">
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
+				<div class="tile"></div>
 			</div>
 		</div>
 	</div>
