--- a/index.html
+++ b/index.html
@@ -124,32 +124,24 @@
 			<p id="playGame1_text"> Back </p>
 		</div>
 		<div id="playboard">
-			<p id="countdown_number"><p>
-			<div id="bottomground" class="ground">
-				<div id="line1" class="line">
-					<div class="box"></div>
-					<div class="box"></div>
-					<div class="box"></div>
-					<div class="box"></div>
-				</div>
-				<div id="line2" class="line">
-					<div class="box"></div>
-					<div class="box"></div>
-					<div class="box"></div>
-					<div class="box"></div>
-				</div>
-				<div id="line3" class="line">
-					<div class="box"></div>
-					<div class="box"></div>
-					<div class="box"></div>
-					<div class="box"></div>
-				</div>
-				<div id="line4" class="line">
-					<div class="box"></div>
-					<div class="box"></div>
-					<div class="box"></div>
-					<div class="box"></div>
-				</div>
+			<p id="countdown_number" class="countdown_number"><p>
+			<div id="bottomground" class="ground" style="width:400px; height:400px">
+				<div class="btile" onclick="checkchoice(0)"></div>
+				<div class="btile" onclick="checkchoice(1)"></div>
+				<div class="btile" onclick="checkchoice(2)"></div>
+				<div class="btile" onclick="checkchoice(3)"></div>
+				<div class="btile" onclick="checkchoice(4)"></div>
+				<div class="btile" onclick="checkchoice(5)"></div>
+				<div class="btile" onclick="checkchoice(6)"></div>
+				<div class="btile" onclick="checkchoice(7)"></div>
+				<div class="btile" onclick="checkchoice(8)"></div>
+				<div class="btile" onclick="checkchoice(9)"></div>
+				<div class="btile" onclick="checkchoice(10)"></div>
+				<div class="btile" onclick="checkchoice(11)"></div>
+				<div class="btile" onclick="checkchoice(12)"></div>
+				<div class="btile" onclick="checkchoice(13)"></div>
+				<div class="btile" onclick="checkchoice(14)"></div>
+				<div class="btile" onclick="checkchoice(15)"></div>
 			</div>
 			<div id="topground" class="ground" style="width:400px; height:400px">
 				<div class="tile"></div>
