--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 	<link rel="stylesheet" href="main.css">
 	<link rel="stylesheet" href="musics.css">
 	<link rel="stylesheet" href="game1.css">
-	<body background=".\Resources\3.png" class="fixBackground"></body>
 	<script type="text/javascript" src="app.js"></script>
 	<script type="text/javascript" src="musics.js"></script>
 	<script type="text/javascript" src="game1.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
-<body>
+<body background=".\Resources\3.png" class="fixBackground">
 	<audio class="Music" autoplay loop preload="metadata" onloadeddata="player();">
 		<source id="song" type="audio/mpeg">
 	</audio>
