--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		</div>
 		<div id="playboard">
 			<p id="countdown_number" class="countdown_number"><p>
-			<div id="bottomground" class="ground" style="width:400px; height:400px">
+			<div id="bottomground" class="ground">
 				<div class="btile" onclick="checkchoice(0)"></div>
 				<div class="btile" onclick="checkchoice(1)"></div>
 				<div class="btile" onclick="checkchoice(2)"></div>
@@ -142,7 +142,7 @@
 				<div class="btile" onclick="checkchoice(14)"></div>
 				<div class="btile" onclick="checkchoice(15)"></div>
 			</div>
-			<div id="topground" class="ground" style="width:400px; height:400px">
+			<div id="topground" class="ground">
 				<div class="tile"></div>
 				<div class="tile"></div>
 				<div class="tile"></div>
