--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 				<div class="transiDot" style="left:60%;"></div>
 			</div>
 		</div>
-		<div id="transi_right" class="transiButton" style="left: calc(50% + 250px);">
+		<div id="transi_right" class="transiButton" style="display: none;left: calc(50% + 250px);">
 			<svg id="right_arrow" height="50" width="50" class="button_page" onclick="transiPage_right()">
 				<polygon points="17,13 37,25 17,37"/>
 			</svg>
 		</div>
-		<div id="transi_left" class="transiButton" style="left: calc(50% - 250px);">
+		<div id="transi_left" class="transiButton" style="display: none;left: calc(50% - 250px);">
 			<svg id="left_arrow" height="50" width="50" class="button_page" onclick="transiPage_left()">
 				<polygon points="13,25 33,13 33,37"/>
 			</svg>
